# simple-reachability

./: CMakeLists.txt  README.md  package.xml
bags/: test.bag
config/: calculation.yaml  config.yaml  constant_level_constant_orientation.yaml  smooth.yaml  visualization.yaml
launch/: calculate_constant_level_constant_orientation.launch  calculate_constant_level_constant_orientation_from_initial.launch  calculate_smooth_workspace.launch  calculate_workspace.launch  visualize_workspace.launch
msg/: CLCORegion.msg  CLCOResult.msg
scripts/: main.py
src/: ReachablePose.cpp  Region.cpp  Region.h  bag_tools.cpp  calculate_constant_level_constant_orientation_regions.cpp  calculate_constant_level_constant_orientation_regions_from_initial.cpp  calculate_constant_level_constant_orientation_workspace.cpp  calculate_smooth_workspace.cpp  calculate_workspace.cpp  mira3d_manipulability.cpp  mira3d_reachability.cpp  mira3d_reachability_old.cpp  move_arm.cpp  move_arm_constrainted.cpp  move_arm_example.cpp  region_analyzer.cpp  region_best.cpp  region_best2.cpp  region_visualizer.cpp  utils.cpp  visualize_workspace.cpp  visualize_workspace.h
